<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:textAlignment="gravity"
    android:orientation="vertical"
    tools:context=".HomePage">


    <Button
        android:id="@+id/addContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="20dp"
        android:text="@string/add_contacts"
        android:textColor="#0D47A1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/selectAlertPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/select_your_alert_preference"
        android:textColor="#0D47A1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/selectClammingMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/select_clamming_music"
        android:textColor="#0D47A1"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/setMedicineTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/set_medicine_time"
        android:textColor="#0D47A1"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="20dp"
        android:text="@string/done"
        android:textColor="#0D47A1"
        tools:ignore="TextContrastCheck" />

</LinearLayout>