<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:textAlignment="gravity"
    android:orientation="vertical"
    tools:context=".register">

    <TextView
        android:id="@+id/appName"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="cursive"
        android:text="@string/safeme"
        android:textColor="#5E35B1"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="138dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/purple_200"
        android:textColorHint="#1565C0"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="228dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/purple_200"
        android:textColorHint="#1565C0"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="228dp" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/purple_200"
        android:textColorHint="#1565C0"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="228dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="gravity"
        android:textColor="@color/purple_200"
        android:textColorHint="#1565C0"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="228dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:minHeight="48dp"
        android:text="@string/register"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="228dp" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/Already_have_an_id_log_in"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="228dp"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        tools:visibility="invisible" />


</LinearLayout>
